--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
