--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ build/
 application.properties
 /src/main/java/com/example/demo/repositories/TestRepository.java
 !/src/test/java/com/example/demo/services/UserServiceTest.java
+!/src/main/resources/data.sql
